release-notes/v2.0/README.md
# Polaris v2.0 truth set of Structural Variants (SVs)

***October 2018***

# Table of Contents
- [Overview](#Overview)
- [Summary statistics](#summary-statistics)

## Overview
We took Structural Variant (SV) calls from multiple resources. To benchmark these calls, we test Mendelian consistency in trio families and Platinum Genome pedigree, and also test for Hardy-Weinberg equilibrium in a population of unrelated individuals.

The final output of our benchmark data is in VCF format. Variants that pass our all tests were labeled as *PASS* in their filter fields.

Variants that fail one or more test were labled with the specific filter name(s) in their filter fields. These variants may be:

- False positive calls
- True variants but:
    - Have inaccurate breakpoints and/or erroneous insertion sequences
    - Lie in tandem repeat region
    - Have population-unstable breakpoints

### Genome Version
Original calls and validation were performed on hg38. hg19 VCF is generated by liftover. 12% variants were not lifted to hg19.

### **Source of the calls**

The original SV calls come from:

- Manta calls from short-read data of Platinum Genome
- Refined Sniffles calls from [Sedlazeck et al. 2018](https://www.nature.com/articles/s41592-018-0001-7)
- Calls from the Ashkenazi son in [Genome in a Bottle](https://www.nist.gov/programs-projects/genome-bottle)

In the release VCF, the *SOURCE* keys in *INFO* fields indicate which dataset(s) a variant was originally called.

### **Samples genotyped in truth data**

The release VCF contains genotypes of:

- Parents and grandparents in the [Platinum Genome pedigree](http://dx.doi.org/10.1101/gr.210500.116)
- NIST Ashkenazi trio from [Genome in a Bottle](https://www.nist.gov/programs-projects/genome-bottle)
- 50 trio families in Polaris sequencing resources

## Summary statistics

### Merged variants partitioned by SVLEN and type (excluding **MERGED**)

|         SV Type       |    DEL    |    DEL    |    INS    |    INS    |    DUP    |    DUP    |
|:----------------------|:---------:|:---------:|:---------:|:---------:|:---------:|:---------:|
|          Filter       |    PASS   |    FAIL   |    PASS   |    FAIL   |    PASS   |    FAIL   |
|   _L_ \< 50           |   1,057   |   1,837   |    847    |   1,983   |     0     |     0     |
|  50 \< _L_ \< 100 bp  |   2,620   |   7,001   |   2,581   |   7,606   |     0     |     0     |
|  100 \< _L_ \< 1kb    |   3,219   |   6,246   |   3,851   |   8,415   |     0     |     0     |
|  1kb \< _L_ \< 10kb   |   2,396   |   3,592   |     33    |    131    |    153    |    126    |
|   _L_ > 10kb          |    342    |    957    |     0     |     0     |    130    |    204    |
| __Total__             | __9,634__ | __19,633__| __7,312__ | __18,135__|  __283__  |  __330__  |

### **Non-reference** calls in NA12878 partitioned by length and type (excluding *MERGED*)

|         SV Type       |    DEL    |    INS    |    DUP    |
|:----------------------|:---------:|:---------:|:---------:|
|   _L_ \< 50           |    997    |    817    |     0     |
|  50 \< _L_ \< 100 bp  |   1,588   |   1,795   |     0     |
|  100 \< _L_ \< 1kb    |   2,093   |   2,956   |     0     |
|  1kb \< _L_ \< 10kb   |    698    |     30    |     22    |
|   _L_ > 10kb          |    102    |     0     |     15    |
| __Total__             | __5,478__ | __5,598__ |   __37__  |

