release-notes/v2.1/README.md
# Polaris v2.1 release note

# Table of Contents
- [Overview](#Overview)
- [Summary statistics](#summary-statistics)

## Overview
We took Structural Variant (SV) calls from multiple resources. To benchmark these calls, we test Mendelian consistency in trio families and Platinum Genome pedigree, and also test for Hardy-Weinberg equilibrium in a population of unrelated individuals.

The final output of our benchmark data is in VCF format. Variants that pass our all tests were labeled as *PASS* in their filter fields.

Variants that fail one or more test were labled with the specific filter name(s) in their filter fields. These variants may be:

- False positive calls
- True variants but:
    - Have inaccurate breakpoints and/or erroneous insertion sequences
    - Lie in tandem repeat region
    - Have population-unstable breakpoints

### Genome Version
Original calls and validation were performed on hg38. hg19 VCF is generated by liftover. 12% variants were not lifted to hg19.

### **Source of the calls**

The original SV calls come from:

- Manta calls from NovaSeq S1 sequenced Platinum Genome pedigree
- Manta calls from HiSeqX sequenced Polaris cohort (150 samples)
- Refined Sniffles calls from [Sedlazeck et al. 2018](https://www.nature.com/articles/s41592-018-0001-7)
- PB CCS Calls from the Ashkenazi son in [Genome in a Bottle](https://www.nist.gov/programs-projects/genome-bottle)

In the release VCF, the *SOURCE* keys in *INFO* fields indicate which dataset(s) a variant was originally called.

### **Samples genotyped in truth data**

The release VCF contains genotypes of:

- Parents and grandparents in the [Platinum Genome pedigree](http://dx.doi.org/10.1101/gr.210500.116)
- NIST Ashkenazi trio from [Genome in a Bottle](https://www.nist.gov/programs-projects/genome-bottle)
- 50 trio families in Polaris sequencing resources

## Summary statistics
The truth set contains 24,590 deletions, 13,474 insrtions and 292 duplications (labed as PASS in vcf), with 13,118 SVs per genome. More details will be available in our Polaris manuscript (coming next month).
